deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: vadimdev

  labels:

    app: spring

spec:

  replicas: 1

  selector:

    matchLabels:

      app: spring

  template:

    metadata:

      labels:

        app: spring

    spec:

      containers:

        - name: spring

          image: spring:latest

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 8080
